--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,8 @@ body {
 	color: #262626;
 }
 
+
+
 .ba-main__services-content h2 {
 	margin: 0;
 	font-size: 90px;
@@ -232,6 +234,8 @@ body {
 	top: 70px;
 	z-index: 1;
 }
+
+/* gallery */
 
 .ba-main-gallery {
 	width: 100%;
@@ -322,3 +326,96 @@ body {
 	color: #5585a2;
 	border: 2px solid #5585a2;
 }
+
+/* contact */
+
+.ba-main-subscribe {
+	background: url('../img/contact-bg.jpg');
+	background-size: 100% 100%;
+}
+
+.ba-main-subscribe__content {
+	padding: 180px 0;
+	
+}
+
+.ba-main-subscribe__content__title {
+	margin: 0;
+	margin-bottom: 30px;
+	font-size: 40px;
+}
+
+.ba-main-subscrie__content__text {
+	margin-bottom: 30px;
+	width: 570px;
+	font-size: 17px;
+}
+
+.ba-main-subscribe__content__input {
+	width: 570px;
+	border: 1px solid #000;
+	padding: 0.7em 0 0.7em 0.5em; 
+	margin-right: 40px;
+}
+
+.ba-main-subscribe__content__label {
+	background: #96b92c;
+	color: #FFF;
+	padding: 0.8em 2em;
+	text-transform: uppercase;
+	border: 1px solid transparent;
+	box-shadow: -5px 10px 40px -10px rgba(0,0,0,0.75);
+	transition: all .5s ease;
+}
+
+.ba-main-subscribe__content__label:hover {
+	cursor: pointer;
+	border: 1px solid #96b92c;
+	background: #FFF;
+	color: #96b92c;
+}
+
+/* blog */
+.ba-main-blog {
+	background: #b07cf7;
+}
+
+.ba-main-blog__content {
+	text-align: center;
+	color: #FFF;
+	padding: 100px;
+}
+
+.ba-main-blog__content__title {
+	margin: 0;
+	font-size: 90px;
+}
+
+.ba-main-blog__content__text {
+	font-size: 17px;
+	margin-bottom: 30px;
+}
+
+.ba-main-blog__content__img {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin-bottom: 40px;
+}
+
+.ba-main-blog__content__button {
+	background: #f72b3b;
+	padding: 0.8em 2em;
+	text-transform: uppercase;
+	border: 1px solid transparent;
+	box-shadow: -5px 10px 40px -10px rgba(0,0,0,0.75);
+	transition: all .5s ease;
+}
+
+.ba-main-blog__content__button:hover {
+	cursor: pointer;
+	border: 1px solid #f72b3b;
+	background: #FFF;
+	color: #f72b3b;
+}
+
