--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,71 @@
 body {
-	margin: 0 auto;
-	font-family: 'Raleway', sans-serif;
-	height: 100%;
+    margin: 0 auto;
+    font-family: 'Raleway', sans-serif;
+    height: 100%;
 }
 
 .ba-header {
-	height: 100%;
-	background: url(../img/header-bg.jpg) no-repeat;
-	background-size: cover;
-	background-position: center center;
-	display: flex;
+    height: 100%;
+    background: url(../img/header-bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
 }
 
 .container {
-	max-width: 1170px;
-	margin: 0 auto;
+    max-width: 1170px;
+    margin: 0 auto;
 }
 
 .ba-header-container {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .ba-header__main-menu {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-top: -40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: -40px;
 }
 
 #logo {
-	font-family: 'Pacifico', cursive;
-	text-decoration: none;
-	font-size: 3em;
-	color: #262626;
-	line-height: 25px;
+    font-family: 'Pacifico', cursive;
+    text-decoration: none;
+    font-size: 3em;
+    color: #262626;
+    line-height: 25px;
 }
 
 .main-menu__navigation {
-	width: 50%;
+    width: 50%;
 }
 
 .navigation__menu {
-	list-style: none;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
 }
 
 .menu__link {
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 16px;
-	text-decoration: none;
-	color: #262626;
-	padding: 5px 0;
-	line-height: 2;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 16px;
+    text-decoration: none;
+    color: #262626;
+    padding: 5px 0;
+    line-height: 2;
 }
 
 .menu__link::before {
-	display: block;
+    display: block;
     content: "";
-	height: 3px;
+    height: 3px;
     width: 0%;
     background-color: #ff6033;
     transition: width .5s ease-in-out;
@@ -73,349 +73,374 @@ body {
 
 .menu__link:hover::before,
 .menu__link--hover::before {
-	width: 100%;
+    width: 100%;
 }
 
 .ba-header__content {
-	width: 33%;
-	text-align: left;
+    width: 33%;
+    text-align: left;
 }
 
 .ba-header__content h1 {
-	font-size: 60px;
-	font-weight: 800;
+    font-size: 60px;
+    font-weight: 800;
 }
 
 .ba-header__content p {
-	font-size: 17px;
-	font-weight: 300;
-	line-height: 25px;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 25px;
 }
 
 #btn-get {
-	width: 200px;
-	height: 50px;
-	background-color: #ff6033;
-	border: 2px solid transparent;
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 20px;
-	font-weight: 300;
-	box-shadow: -5px 10px 50px -10px rgba(0,0,0,0.75);
-	transition: all .5s ease;
+    width: 200px;
+    height: 50px;
+    background-color: #ff6033;
+    border: 2px solid transparent;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 300;
+    box-shadow: -5px 10px 50px -10px rgba(0, 0, 0, 0.75);
+    transition: all .5s ease;
 }
 
 #btn-get:hover {
-	color: #ff6033;
-	background-color: #fff;
-	border: 2px solid #ff6033;
+    color: #ff6033;
+    background-color: #fff;
+    border: 2px solid #ff6033;
 }
 
 .scroll-wrapper {
-	width: 100%;
-	text-align: center;
+    width: 100%;
+    text-align: center;
 }
 
 .scroll {
-	width: 23px;
-	height: 40px;
-	stroke: #2d2d2d;
-	cursor: pointer;
+    width: 23px;
+    height: 40px;
+    stroke: #2d2d2d;
+    cursor: pointer;
 }
 
 .scroll:hover {
-	animation-duration: 3s;
-  	animation-name: hvr-buzz-out;
-  	animation-iteration-count: infinite;
+    animation-duration: 3s;
+    animation-name: hvr-buzz-out;
+    animation-iteration-count: infinite;
 }
 
 .ba-main {
-	width: 100%;
-	background-color: #00b2b2;
-	background-size: cover;
+    width: 100%;
+    background-color: #00b2b2;
+    background-size: cover;
 }
 
 .ba-main__about {
-	height: 100vh;
-	display: grid;
-	flex-direction: row;
-	grid-template-columns: 1fr 1fr;
-	align-items: center;
+    height: 100vh;
+    display: grid;
+    flex-direction: row;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 
 .about-content h2 {
-	margin: 0;
-	font-size: 90px;
-	font-weight: 700;
-	color: #fff;
+    margin: 0;
+    font-size: 90px;
+    font-weight: 700;
+    color: #fff;
 }
 
 .about-content p {
-	width: 90%;
-	font-size: 18px;
-	line-height: 25px;
-	font-weight: 300;
-	color: #fff;
+    width: 90%;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 300;
+    color: #fff;
 }
 
 .ba-main__services {
-	width: 100%;
-	background-color: #70bfff;
-	position: relative;
+    width: 100%;
+    background-color: #70bfff;
+    position: relative;
 }
 
 .ba-main__services-content {
-	height: 100vh;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	align-items: center;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 
 .services-list {
-	height: 460px;
-	list-style: none;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
+    height: 460px;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .services-list__item {
-	width: 400px;
-	height: 100px;
-	background-color: #fff;
-	display: flex;
-	box-shadow: -3px 10px 20px -10px rgba(0,0,0,0.75);
-	cursor: pointer;
-	transition: all .5s ease;
+    width: 400px;
+    height: 100px;
+    background-color: #fff;
+    display: flex;
+    box-shadow: -3px 10px 20px -10px rgba(0, 0, 0, 0.75);
+    cursor: pointer;
+    transition: all .5s ease;
 }
 
 .services-list__item:hover {
-	transform: translateX(15px);
+    transform: translateX(15px);
 }
 
 .backet, .hand, .earth, .carrot {
-	width: 50px;
-	height: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 .services-list__icon {
-	width: 100px;
-	height: 100px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-left: 1px solid #9d9d9d;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 1px solid #9d9d9d;
 }
 
 .services-list__text {
-	font-weight: 900;
-	font-size: 20px;
-	width: 75%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	color: #262626;
+    font-weight: 900;
+    font-size: 20px;
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #262626;
 }
 
-
-
 .ba-main__services-content h2 {
-	margin: 0;
-	font-size: 90px;
-	font-weight: 700;
-	color: #fff;
-	z-index: 20;
+    margin: 0;
+    font-size: 90px;
+    font-weight: 700;
+    color: #fff;
+    z-index: 20;
 }
 
 #tomatoes {
-	position: absolute;
-	right: 100px;
-	top: 70px;
-	z-index: 1;
+    position: absolute;
+    right: 100px;
+    top: 70px;
+    z-index: 1;
 }
 
 /* gallery */
 
 .ba-main-gallery {
-	width: 100%;
-	background-color: #ffe92f;
+    width: 100%;
+    background-color: #ffe92f;
 }
+
 .ba-main__gallery-content {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .gallery-content-description {
-	width: 50%;
-	text-align: center;
+    width: 50%;
+    text-align: center;
 }
 
 .gallery-content-description h2 {
-	font-size: 90px;
-	font-weight: 700;
-	margin: 50px 0 0;
-	color: #262626;
+    font-size: 90px;
+    font-weight: 700;
+    margin: 50px 0 0;
+    color: #262626;
 }
+
 .gallery-content-description p {
-	font-size: 17px;
-	font-weight: 300;
-	color: #262626;
-	line-height: 27px;
+    font-size: 17px;
+    font-weight: 300;
+    color: #262626;
+    line-height: 27px;
 }
 
 .showcase-row-1 {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
 }
 
 .showcase-row-1 .gallery-item:nth-child(1) {
-	grid-column-start: span 2;
-	grid-row-start: span 2;
+    grid-column-start: span 2;
+    grid-row-start: span 2;
 }
 
 .showcase-row-2 {
-	margin: 20px 0 50px;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 20px;
+    margin: 20px 0 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
 
 .gallery-item {
-	position: relative;
-	cursor: pointer;
+    position: relative;
+    cursor: pointer;
 }
 
 .gallery-item-bg {
-	display: block;
+    display: block;
     width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0px;
-	font-size: 2em;
-	color: white;
-	text-align: center;
-	align-content: center;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    font-size: 2em;
+    color: white;
+    text-align: center;
+    align-content: center;
 }
 
-
 .btn {
-	width: 200px;
-	height: 55px;
-	text-transform: uppercase;
-	font-weight: 300;
-	font-size: 20px;
-	outline: none;
-	border: none;
-	box-shadow: -5px 10px 40px -10px rgba(0,0,0,0.75);
-	color: #fff;
+    width: 200px;
+    height: 55px;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 20px;
+    outline: none;
+    border: none;
+    box-shadow: -5px 10px 40px -10px rgba(0, 0, 0, 0.75);
+    color: #fff;
 }
 
 .btn-more {
-	margin-bottom: 100px;
-	background-color: #5585a2;
-	border: 2px solid transparent;
-	transition: all .5s ease;
+    margin-bottom: 100px;
+    background-color: #5585a2;
+    border: 2px solid transparent;
+    transition: all .5s ease;
 }
 
 .btn-more:hover {
-	background-color: #fff;
-	color: #5585a2;
-	border: 2px solid #5585a2;
+    background-color: #fff;
+    color: #5585a2;
+    border: 2px solid #5585a2;
 }
 
 /* contact */
 
 .ba-main-subscribe {
-	background: url('../img/contact-bg.jpg');
-	background-size: 100% 100%;
+    background: url("../img/contact-bg.jpg");
+    background-size: 100% 100%;
 }
 
 .ba-main-subscribe__content {
-	padding: 180px 0;
-	
+    padding: 180px 0;
 }
 
 .ba-main-subscribe__content__title {
-	margin: 0;
-	margin-bottom: 30px;
-	font-size: 40px;
+    margin: 0;
+    margin-bottom: 30px;
+    font-size: 40px;
 }
 
 .ba-main-subscrie__content__text {
-	margin-bottom: 30px;
-	width: 570px;
-	font-size: 17px;
+    margin-bottom: 30px;
+    width: 570px;
+    font-size: 17px;
 }
 
 .ba-main-subscribe__content__input {
-	width: 570px;
-	border: 1px solid #000;
-	padding: 0.7em 0 0.7em 0.5em; 
-	margin-right: 40px;
+    width: 570px;
+    border: 1px solid #000;
+    padding: 0.7em 0 0.7em 0.5em;
+    margin-right: 40px;
 }
 
 .ba-main-subscribe__content__label {
-	background: #96b92c;
-	color: #FFF;
-	padding: 0.8em 2em;
-	text-transform: uppercase;
-	border: 1px solid transparent;
-	box-shadow: -5px 10px 40px -10px rgba(0,0,0,0.75);
-	transition: all .5s ease;
+    background: #96b92c;
+    color: #FFF;
+    padding: 0.8em 2em;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    box-shadow: -5px 10px 40px -10px rgba(0, 0, 0, 0.75);
+    transition: all .5s ease;
 }
 
 .ba-main-subscribe__content__label:hover {
-	cursor: pointer;
-	border: 1px solid #96b92c;
-	background: #FFF;
-	color: #96b92c;
+    cursor: pointer;
+    border: 1px solid #96b92c;
+    background: #FFF;
+    color: #96b92c;
 }
 
 /* blog */
 .ba-main-blog {
-	background: #b07cf7;
+    background: #b07cf7;
 }
 
 .ba-main-blog__content {
-	text-align: center;
-	color: #FFF;
-	padding: 100px;
+    text-align: center;
+    color: #FFF;
+    padding: 100px;
 }
 
 .ba-main-blog__content__title {
-	margin: 0;
-	font-size: 90px;
+    margin: 0;
+    font-size: 90px;
 }
 
 .ba-main-blog__content__text {
-	font-size: 17px;
-	margin-bottom: 30px;
+    font-size: 17px;
+    margin-bottom: 30px;
 }
 
 .ba-main-blog__content__img {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	margin-bottom: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 40px;
 }
 
 .ba-main-blog__content__button {
-	background: #f72b3b;
-	padding: 0.8em 2em;
-	text-transform: uppercase;
-	border: 1px solid transparent;
-	box-shadow: -5px 10px 40px -10px rgba(0,0,0,0.75);
-	transition: all .5s ease;
+    background: #f72b3b;
+    padding: 0.8em 2em;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    box-shadow: -5px 10px 40px -10px rgba(0, 0, 0, 0.75);
+    transition: all .5s ease;
 }
 
 .ba-main-blog__content__button:hover {
-	cursor: pointer;
-	border: 1px solid #f72b3b;
-	background: #FFF;
-	color: #f72b3b;
+    cursor: pointer;
+    border: 1px solid #f72b3b;
+    background: #FFF;
+    color: #f72b3b;
 }
 
+/*footer*/
+
+footer {
+    background: #262626;
+    color: rgba(255, 255, 255, .8);
+}
+
+.footer-flex {
+    padding: 1.6em 0;
+    display: flex;
+    justify-content: space-between;
+	align-items: center;
+}
+
+.footer__logo {
+	font-family: 'Pacifico', cursive;
+	font-size: 28px;
+	display: inline-block;
+	position: absolute;
+	transform: translateX(-50%);
+	left: 50%;
+}
+
+.footer__text--red {
+    color: #cc1e44;
+}
